@@ -1,3 +1,10 @@
+2009-10-05  Jaroslav Hajek  <highegg@gmail.com>
+
+	* ov-ch-mat.h (octave_char_matrix): Don't declare allocator and
+	typeid.
+	* ov-ch-mat.cc: Don't define them.
+	* ov.cc (install_types): Don't register octave_char_matrix.
+
 2009-10-05  John W. Eaton  <jwe@octave.org>
 
 	* ov.h (octave_value (const charMatrix&, char, bool),
